Replace constructors with static factory method